--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.0",
+    "mongodb": "^4.9.0",
     "next": "12.3.1",
+    "next-auth": "^4.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
